third_party/WebKit/WebCore/platform/Widget.h
@@ -22,7 +22,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
  * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
 #ifndef Widget_h
@@ -118,13 +118,20 @@ public:
 
     PlatformWidget platformWidget() const { return m_widget; }
     void setPlatformWidget(PlatformWidget widget)
-    { 
+    {
         if (widget != m_widget) {
             releasePlatformWidget();
             m_widget = widget;
             retainPlatformWidget();
         }
     }
+#if PLATFORM(HAIKU)
+    PlatformWidget topLevelPlatformWidget() const { return m_topLevelPlatformWidget; }
+    void setTopLevelPlatformWidget(PlatformWidget widget)
+    {
+        m_topLevelPlatformWidget = widget;
+    }
+#endif
 
     int x() const { return frameRect().x(); }
     int y() const { return frameRect().y(); }
@@ -162,7 +169,7 @@ public:
 
     virtual bool isFrameView() const { return false; }
     virtual bool isPluginView() const { return false; }
-    // FIXME: The Mac plug-in code should inherit from PluginView. When this happens PluginWidget and PluginView can become one class. 
+    // FIXME: The Mac plug-in code should inherit from PluginView. When this happens PluginWidget and PluginView can become one class.
     virtual bool isPluginWidget() const { return false; }
     virtual bool isScrollbar() const { return false; }
 
@@ -179,7 +186,7 @@ public:
     // when converting window rects.
     IntRect convertToContainingWindow(const IntRect&) const;
     IntRect convertFromContainingWindow(const IntRect&) const;
-    
+
     IntPoint convertToContainingWindow(const IntPoint&) const;
     IntPoint convertFromContainingWindow(const IntPoint&) const;
 
@@ -190,7 +197,7 @@ public:
 
 #if PLATFORM(MAC)
     NSView* getOuterView() const;
-    
+
     static void beforeMouseDown(NSView*, Widget*);
     static void afterMouseDown(NSView*, Widget*);
 
@@ -208,12 +215,12 @@ private:
 
     void releasePlatformWidget();
     void retainPlatformWidget();
-    
+
     // These methods are used to convert from the root widget to the containing window,
     // which has behavior that may differ between platforms (e.g. Mac uses flipped window coordinates).
     static IntRect convertFromRootToContainingWindow(const Widget* rootWidget, const IntRect&);
     static IntRect convertFromContainingWindowToRoot(const Widget* rootWidget, const IntRect&);
-    
+
     static IntPoint convertFromRootToContainingWindow(const Widget* rootWidget, const IntPoint&);
     static IntPoint convertFromContainingWindowToRoot(const Widget* rootWidget, const IntPoint&);
 
@@ -222,11 +229,14 @@ private:
     PlatformWidget m_widget;
     bool m_selfVisible;
     bool m_parentVisible;
-    
+
     IntRect m_frame; // Not used when a native widget exists.
 
 #if PLATFORM(MAC)
     WidgetPrivate* m_data;
+#endif
+#if PLATFORM(HAIKU)
+    PlatformWidget m_topLevelPlatformWidget;
 #endif
 };
 
