third_party/WebKit/WebCore/platform/haiku/WidgetHaiku.cpp
@@ -1,6 +1,7 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
  * Copyright (C) 2007 Ryan Leavengood <leavengood@gmail.com>
+ * Copyright (C) 2010 Stephan Aßmus <superstippi@gmx.de>
  *
  * All rights reserved.
  *
@@ -30,16 +31,38 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Widget.h"
 
 #include "Cursor.h"
-#include "GraphicsContext.h"
 #include "IntRect.h"
 #include "NotImplemented.h"
-#include <Control.h>
 #include <View.h>
-
 
 namespace WebCore {
 
+class AutoPlatformWidgetLocker {
+public:
+    AutoPlatformWidgetLocker(PlatformWidget widget)
+        : m_widget(widget)
+    {
+        if (!m_widget || m_widget->LockLooperWithTimeout(5000) != B_OK)
+            m_widget = 0;
+    }
+
+    ~AutoPlatformWidgetLocker()
+    {
+        if (m_widget)
+            m_widget->UnlockLooper();
+    }
+
+    bool isLocked() const
+    {
+        return m_widget;
+    }
+
+private:
+    PlatformWidget m_widget;
+};
+
 Widget::Widget(PlatformWidget widget)
+    : m_topLevelPlatformWidget(0)
 {
     init(widget);
 }
@@ -60,29 +83,41 @@ void Widget::setFrameRect(const IntRect& rect)
 
 void Widget::setFocus()
 {
-    if (platformWidget())
-        platformWidget()->MakeFocus();
+    AutoPlatformWidgetLocker locker(topLevelPlatformWidget());
+    if (locker.isLocked())
+        topLevelPlatformWidget()->MakeFocus();
 }
 
 void Widget::setCursor(const Cursor& cursor)
 {
-    if (platformWidget())
-        platformWidget()->SetViewCursor(cursor.impl());
+    AutoPlatformWidgetLocker locker(topLevelPlatformWidget());
+    if (locker.isLocked())
+        topLevelPlatformWidget()->SetViewCursor(cursor.impl());
 }
 
 void Widget::show()
 {
-    if (platformWidget())
+    setSelfVisible(true);
+    if (!isParentVisible())
+        return;
+
+    AutoPlatformWidgetLocker locker(platformWidget());
+    if (locker.isLocked() && platformWidget()->IsHidden())
         platformWidget()->Show();
 }
 
 void Widget::hide()
 {
-    if (platformWidget())
+    setSelfVisible(false);
+    if (!isParentVisible())
+        return;
+
+    AutoPlatformWidgetLocker locker(platformWidget());
+    if (locker.isLocked() && !platformWidget()->IsHidden())
         platformWidget()->Hide();
 }
 
-void Widget::paint(GraphicsContext* p, IntRect const& r)
+void Widget::paint(GraphicsContext*, IntRect const&)
 {
     notImplemented();
 }
